// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseChunkHeader should parse chunk header. 1`] = `
Object {
  "rangeAfter": Object {
    "lines": 4,
    "start": 3,
  },
  "rangeBefore": Object {
    "lines": 71,
    "start": 3,
  },
}
`;

exports[`parseChunkHeader should parse concise chunk header 1`] = `
Object {
  "rangeAfter": Object {
    "lines": 1,
    "start": 1,
  },
  "rangeBefore": Object {
    "lines": 1,
    "start": 1,
  },
}
`;

exports[`parseChunkHeader should parse normal chunk header. 1`] = `
Object {
  "rangeAfter": Object {
    "lines": 4,
    "start": 3,
  },
  "rangeBefore": Object {
    "lines": 71,
    "start": 3,
  },
}
`;
